# backend/astraflow-api/internal/server/grpc.go
@@ -19,6 +19,7 @@ func NewGRPCServer(
 	health *service.HealthService,
 	expert *service.ExpertService,
 	feedback *service.FeedbackService,
+	marketplace *service.MarketplaceService,
 ) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
@@ -39,5 +40,6 @@ func NewGRPCServer(
 	v1.RegisterHealthServiceServer(srv, health)
 	v1.RegisterExpertServiceServer(srv, expert)
 	v1.RegisterFeedbackServiceServer(srv, feedback)
+	v1.RegisterMarketplaceServiceServer(srv, marketplace)
 	return srv
 }
